up through draft of results done

--- a/manuscript/components/manuscript.bib
+++ b/manuscript/components/manuscript.bib
@@ -1,3 +1,14 @@
+@article{paul2011probability,
+  title={Probability surveys, conditional probability, and ecological risk assessment},
+  author={Paul, John F and Munns, Wayne R},
+  journal={Environmental Toxicology and Chemistry},
+  volume={30},
+  number={6},
+  pages={1488--1495},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
 @article{landis1977measurement,
   title={The measurement of observer agreement for categorical data},
   author={Landis, J Richard and Koch, Gary G},
