fixed results in-line code

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -311,14 +311,9 @@ exceeding the advisory level increases as a function of chlorophyll
 We use this association to identify chlorophyll \emph{a} concentrations
 that are associated with greater than even odds of exceeding a given
 health advisory level (Table \ref{tab:mc_chla_table}). These represent
-27.7831559\%,
-\texttt{100*(length(nla\_dat\$CHLA{[}nla\_dat\$CHLA\textgreater{}=mc\_chla{[}2{]}{]})/length(nla\_dat\$CHLA))}\%,
-\texttt{100*(length(nla\_dat\$CHLA{[}nla\_dat\$CHLA\textgreater{}=mc\_chla{[}3{]}{]})/length(nla\_dat\$CHLA))}\%,
-and
-\texttt{100*(length(nla\_dat\$CHLA{[}nla\_dat\$CHLA\textgreater{}=mc\_chla{[}4{]}{]})/length(nla\_dat\$CHLA))}\%
-of sample lakes for the U.S EPA childrens drinking water, the WHO
-drinking water, the U.S. EPA Adult drinking water, and the WHO
-recreationsl standards, respecitvely.
+27.8\%, 11.9\%, 8.3\%, and 7.4\% of sample lakes for the U.S EPA
+childrens drinking water, the WHO drinking water, the U.S. EPA Adult
+drinking water, and the WHO recreationsl standards, respecitvely.
 
 \section{Discussion}\label{discussion}
 
