--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -344,189 +344,41 @@ Levels. \label{fig:multi_cp_plot}}
 \caption{Various suggested microcystin-LR health advisory
 concentrations. \label{tab:microcystin_levels}}\tabularnewline
 \toprule
-\begin{minipage}[b]{0.11\columnwidth}\raggedright\strut
-Source
-\strut\end{minipage} &
-\begin{minipage}[b]{0.16\columnwidth}\raggedright\strut
-Type
-\strut\end{minipage} &
-\begin{minipage}[b]{0.20\columnwidth}\raggedright\strut
-Concentration
-\strut\end{minipage}\tabularnewline
+Source & Type & Concentration\tabularnewline
 \midrule
 \endfirsthead
 \toprule
-\begin{minipage}[b]{0.11\columnwidth}\raggedright\strut
-Source
-\strut\end{minipage} &
-\begin{minipage}[b]{0.16\columnwidth}\raggedright\strut
-Type
-\strut\end{minipage} &
-\begin{minipage}[b]{0.20\columnwidth}\raggedright\strut
-Concentration
-\strut\end{minipage}\tabularnewline
+Source & Type & Concentration\tabularnewline
 \midrule
 \endhead
-\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
-WHO
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Drinking
-\strut\end{minipage} &
-\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
-1 \(\mu\)g/L
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
-U.S. EPA
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Drinking
-\strut\end{minipage} &
-\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
-0.3 \(\mu\)g/L
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
-U.S. EPA
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Drinking
-\strut\end{minipage} &
-\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
-1.6 \(\mu\)g/L
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
-WHO
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Recreational
-\strut\end{minipage} &
-\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
-2-4 \(\mu\)g/L
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
-WHO
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Recreational
-\strut\end{minipage} &
-\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
-10-20 \(\mu\)g/L
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
-WHO
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Recreational
-\strut\end{minipage} &
-\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
-20-2000 \(\mu\)g/L
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
-WHO
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Recreational
-\strut\end{minipage} &
-\begin{minipage}[t]{0.20\columnwidth}\raggedright\strut
-\textgreater{}2000 \(\mu\)g/L
-\strut\end{minipage}\tabularnewline
+WHO & Drinking & 1 \(\mu\)g/L\tabularnewline
+U.S. EPA & Drinking & 0.3 \(\mu\)g/L\tabularnewline
+U.S. EPA & Drinking & 1.6 \(\mu\)g/L\tabularnewline
+WHO & Recreational & 2-4 \(\mu\)g/L\tabularnewline
+WHO & Recreational & 10-20 \(\mu\)g/L\tabularnewline
+WHO & Recreational & 20-2000 \(\mu\)g/L\tabularnewline
+WHO & Recreational & \textgreater{}2000 \(\mu\)g/L\tabularnewline
 \bottomrule
 \end{longtable}
 
 \newpage
 
-\begin{verbatim}
-## Warning in split.large.cells(t): length of split.cells vector is smaller
-## than data. Default value will be used for other cells
-\end{verbatim}
-
-\begin{verbatim}
-## Warning in split.large.cells(t.colnames): length of split.cells vector is
-## smaller than data. Default value will be used for other cells
-\end{verbatim}
-
-\begin{longtable}[c]{@{}llll@{}}
+\begin{longtable}[c]{@{}llrr@{}}
 \caption{Chlorophyll extit\{a\} concentrations that are associated with
-a 50\% probability of exceeding a microcystin-LR health advisory
+a 50 percent probability of exceeding a microcystin-LR health advisory
 concentration. \label{tab:mc_chla_table}}\tabularnewline
 \toprule
-\begin{minipage}[b]{0.11\columnwidth}\raggedright\strut
-Source
-\strut\end{minipage} &
-\begin{minipage}[b]{0.16\columnwidth}\raggedright\strut
-Type
-\strut\end{minipage} &
-\begin{minipage}[b]{0.17\columnwidth}\raggedright\strut
-Microcystin
-\strut\end{minipage} &
-\begin{minipage}[b]{0.17\columnwidth}\raggedright\strut
-Chlorophyll
-\strut\end{minipage}\tabularnewline
+Source & Type & Microcystin & Chlorophyll\tabularnewline
 \midrule
 \endfirsthead
 \toprule
-\begin{minipage}[b]{0.11\columnwidth}\raggedright\strut
-Source
-\strut\end{minipage} &
-\begin{minipage}[b]{0.16\columnwidth}\raggedright\strut
-Type
-\strut\end{minipage} &
-\begin{minipage}[b]{0.17\columnwidth}\raggedright\strut
-Microcystin
-\strut\end{minipage} &
-\begin{minipage}[b]{0.17\columnwidth}\raggedright\strut
-Chlorophyll
-\strut\end{minipage}\tabularnewline
+Source & Type & Microcystin & Chlorophyll\tabularnewline
 \midrule
 \endhead
-\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
-U.S. EPA
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Drinking
-\strut\end{minipage} &
-\begin{minipage}[t]{0.17\columnwidth}\raggedright\strut
-0.3
-\strut\end{minipage} &
-\begin{minipage}[t]{0.17\columnwidth}\raggedright\strut
-23.68
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
-WHO
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Drinking
-\strut\end{minipage} &
-\begin{minipage}[t]{0.17\columnwidth}\raggedright\strut
-1
-\strut\end{minipage} &
-\begin{minipage}[t]{0.17\columnwidth}\raggedright\strut
-63.94
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
-U.S. EPA
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Drinking
-\strut\end{minipage} &
-\begin{minipage}[t]{0.17\columnwidth}\raggedright\strut
-1.6
-\strut\end{minipage} &
-\begin{minipage}[t]{0.17\columnwidth}\raggedright\strut
-89.71
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.11\columnwidth}\raggedright\strut
-WHO
-\strut\end{minipage} &
-\begin{minipage}[t]{0.16\columnwidth}\raggedright\strut
-Recreational
-\strut\end{minipage} &
-\begin{minipage}[t]{0.17\columnwidth}\raggedright\strut
-2
-\strut\end{minipage} &
-\begin{minipage}[t]{0.17\columnwidth}\raggedright\strut
-102.6
-\strut\end{minipage}\tabularnewline
+U.S. EPA & Drinking & 0.3 & 23.68\tabularnewline
+WHO & Drinking & 1.0 & 63.94\tabularnewline
+U.S. EPA & Drinking & 1.6 & 89.71\tabularnewline
+WHO & Recreational & 2.0 & 102.60\tabularnewline
 \bottomrule
 \end{longtable}
 
