render with changes to fig width

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -313,7 +313,7 @@ that are associated with greater than even odds of exceeding a given
 health advisory level (Table \ref{tab:mc_chla_table}). These represent
 27.8\%, 11.9\%, 8.3\%, and 7.4\% of sample lakes for the U.S EPA
 childrens drinking water, the WHO drinking water, the U.S. EPA Adult
-drinking water, and the WHO recreationsl standards, respecitvely.
+drinking water, and the WHO recreational standards, respecitvely.
 
 \section{Discussion}\label{discussion}
 
@@ -364,8 +364,8 @@ WHO & Recreational & \textgreater{}2000 \(\mu\)g/L\tabularnewline
 \newpage
 
 \begin{longtable}[c]{@{}llrr@{}}
-\caption{Chlorophyll extit\{a\} concentrations that are associated with
-a 50 percent probability of exceeding a microcystin-LR health advisory
+\caption{Chlorophyll \textit{a} concentrations that are associated with
+a 50\% probability of exceeding a microcystin-LR health advisory
 concentration. \label{tab:mc_chla_table}}\tabularnewline
 \toprule
 Source & Type & Microcystin & Chlorophyll\tabularnewline
