--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -175,14 +175,14 @@ In the 2007 NLA, microcystin-LR concentrations ranged from `r min(nla_dat$MCYST_
 The association between Log 10 microcystin-LR and Log 10 chlorophyll *a* show a wedge pattern (Figure \ref{fig:chla_micro_scatter}).  This indicates that higher concentrations of microcystin-LR almost always co-occur with higher concentrations of chlorophyll *a* yet the inverse is not true.  Higher chlorophyll *a* is not necessarily predictive of higher microcystin-LR concentrations; however, chlorophyll *a* may be predictive of the probability of exceeding a certian concentration.  This is the case as the probability of exceeding each of the four tested health adviroy levels shos this patern of probability of exceeding the advisory level increases as a function of chlorophyll *a* concentration (Figure \ref{fig:multi_cp_plot}).
 
 We use this association to identify chlorophyll *a* concentrations that are associated with greater than even odds of exceeding a given health advisory level (Table \ref{tab:mc_chla_table}).  These represent `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[1]])/length(nla_dat$CHLA)),1)`%, `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[2]])/length(nla_dat$CHLA)),1)`%,
-`r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[3]])/length(nla_dat$CHLA)),1)`%, and `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[4]])/length(nla_dat$CHLA)),1)`% of sample lakes for the U.S EPA childrens drinking water, the WHO drinking water, the U.S. EPA Adult drinking water, and the WHO recreationsl standards, respecitvely.
+`r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[3]])/length(nla_dat$CHLA)),1)`%, and `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[4]])/length(nla_dat$CHLA)),1)`% of sample lakes for the U.S EPA childrens drinking water, the WHO drinking water, the U.S. EPA Adult drinking water, and the WHO recreational standards, respecitvely.
 <!-- (Figure \ref{fig:chla_micro_cdf}) -->
 
 #Discussion
 
 #Figures
 
-```{r chla_micro_scatter, echo=FALSE, fig.width=8, fig.cap="Scatterplot showing association betweeen chlorophyll \\textit{a} and microcystin-LR. \\label{fig:chla_micro_scatter}"}
+```{r chla_micro_scatter, echo=FALSE, fig.width=7, fig.cap="Scatterplot showing association betweeen chlorophyll \\textit{a} and microcystin-LR. \\label{fig:chla_micro_scatter}"}
 plot_scatter(nla_dat,xvar="log_chla",yvar = "log_micro",pt_col=viridis(1),
              x=expression(paste('Log10 Chl ', italic("a"),' (',mu,'g/L)')),
              y=expression(paste('Log10 microcystin-LR',' (',mu,'g/L)')))
@@ -197,7 +197,7 @@ plot_cdf(nla_dat[,c("log_chla","log_micro")],"")
 
 \newpage-->
 
-```{r epa_child_cp_plot, echo=FALSE, fig.width=8, fig.cap="Conditional probability plots showing association between the probability of exceeding various microcystin-LR (MLR) health advisory Levels. \\label{fig:multi_cp_plot}"}
+```{r epa_child_cp_plot, echo=FALSE, fig.width=7, fig.cap="Conditional probability plots showing association between the probability of exceeding various microcystin-LR (MLR) health advisory Levels. \\label{fig:multi_cp_plot}"}
 multiplot(
   plot_cp(epa_child_cp,x = "Log 10 Chlorophyll", 
           y = "Probability of Exceeding 0.3 ug/L MLR",
@@ -211,7 +211,7 @@ multiplot(
   plot_cp(who_rec_low1_cp, x = "Log 10 Chlorophyll", 
           y = "Probability of Exceeding 2 ug/L MLR", 
           title="WHO Recreational Water Advisory Level"),
-  cols=2
+  cols=1
 )
 ```
 
@@ -257,7 +257,7 @@ knitr::kable(mc_conc_table)
 
 \newpage
 
-```{r mc_chla_table, results='asis', echo=FALSE, tab.cap="Chlorophyll \textit{a} concentrations that are associated with a 50 percent probability of exceeding a microcystin-LR health advisory concentration. \\label{tab:mc_chla_table}"}
+```{r mc_chla_table, results='asis', echo=FALSE, tab.cap="Chlorophyll \\textit{a} concentrations that are associated with a 50% probability of exceeding a microcystin-LR health advisory concentration. \\label{tab:mc_chla_table}"}
 mc_chla_tbl <- data.frame(Source=mc_names,Type=mc_type,Microcystin=mc_guides,Chlorophyll=mc_chla)[1:4,]
 #pandoc.table(mc_chla_tbl,justify = "left" ,split.table = 120, split.cells  = c(20,20,20))
 knitr::kable(mc_chla_tbl)
