--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -317,6 +317,8 @@ drinking water, and the WHO recreational standards, respecitvely.
 
 \section{Discussion}\label{discussion}
 
+\newpage
+
 \section{Figures}\label{figures}
 
 \begin{figure}[htbp]
@@ -333,7 +335,11 @@ and microcystin-LR. \label{fig:chla_micro_scatter}}
 \includegraphics{manuscript_files/figure-latex/epa_child_cp_plot-1.pdf}
 \caption{Conditional probability plots showing association between the
 probability of exceeding various microcystin-LR (MLR) health advisory
-Levels. \label{fig:multi_cp_plot}}
+Levels. A.) Plot for U.S. EPA childrens drinking water advisory (0.3
+\(\mu\)g/L). B.) Plot for WHO drinking water advisory (1 \(\mu\)g/L).
+C.) Plot for U.S. EPA adult drinking water advisory (1.6 \(\mu\)g/L).
+D.) Plot for WHO recreational advisory (2 \(\mu\)g/L).
+\label{fig:multi_cp_plot}}
 \end{figure}
 
 \newpage
@@ -381,6 +387,8 @@ U.S. EPA & Drinking & 1.6 & 89.71\tabularnewline
 WHO & Recreational & 2.0 & 102.60\tabularnewline
 \bottomrule
 \end{longtable}
+
+\newpage
 
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
